--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "camelcase-keys": "^4.2.0",
     "debug": "^4.0.1",
-    "generator-loopback": "^6.0.0",
+    "generator-loopback": "https://github.com/mrbatista/generator-loopback#chore/update-dependencies",
     "inquirer": "~6.3.1",
     "minimist": "^1.2.0"
   },
